compiler/test/parse-err/not-real-unsupported.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func NotRealUnsupported(
    // expected-note@below{{operand has semiring real}}
    a: real) -> real {
    // NOT is not supported for real semiring (only bool)
    // expected-error@below{{not operator is only supported for bool type}}
    return !a;
}
